# romgeo-api

./: .gitignore  MANIFEST.in  README.md  README.ro.md  pyproject.toml  requirements.txt
docs/: romgeo_api.rst
src/romgeo_api/: __init__.py  config.py  extras.py  romgeo_api.py
src/romgeo_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/romgeo_api/static/: index.html
